manifests/health/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-health-deployment
  labels:
    app: otus-health
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-health
  template:
    metadata:
      name: otus-health
      labels:
        app: otus-health
    spec:
      containers:
      - name: otus-health-app
        image: agvozdevdev/otus-health:latest
        ports:
          - containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 5
          periodSeconds: 5        
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 2
          periodSeconds: 5
