manifests/health/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-health-service
spec:
  selector:
    app: otus-health
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8000
  type: NodePort
