manifests/health/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - pathType: Prefix
        path: /otusapp/gvozdev($|/)(.*)
        backend:
          service:
            name: otus-health-service
            port:
              number: 9000
